--- a/404.html
+++ b/404.html
@@ -79,8 +79,8 @@
     <div class="container">
         <h1>404</h1>
         <p>Oops! A página que você está procurando não foi encontrada.</p>
-        <a href="https://skyapps.squareweb.app/">Voltar para a Página Inicial</a>
-        <footer>&copy; 2024 Sky Apps. Todos os direitos reservados.</footer>
+        <a href="https://discord.gg/6SwSw2g2tE">Voltar para a Página Inicial</a>
+        <footer>&copy; 2025 Souzaz. Todos os direitos reservados.</footer>
     </div>
 </body>
 </html>
